--- a/index.html
+++ b/index.html
@@ -29,81 +29,81 @@
         </div>
         <div class="battery-div inner-bottom-charts">
           <p>Estimated Water Saving</p>
-          <h1 id="main-water-litres">550</h1>
+          <h1 id="main-water-litres">90</h1>
           <p>Leters</p>
 
           <div class="inner-battery">
-            <div class="main-battery">
-              <div class="battery-stages higher-litre3"></div>
-              <div class="battery-stages higher-litre2 higher-litre3"></div>
-              <div class="battery-stages higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre2 low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre low-litre2 low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
+            <div class="main-battery" id="main-battery1">
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
             </div>
-            <div class="main-battery">
-              <div class="battery-stages higher-litre3"></div>
-              <div class="battery-stages higher-litre2 higher-litre3"></div>
-              <div class="battery-stages higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre2 low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre low-litre2 low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
+            <div class="main-battery" id="main-battery2">
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
             </div>
-            <div class="main-battery">
-              <div class="battery-stages higher-litre3"></div>
-              <div class="battery-stages higher-litre2 higher-litre3"></div>
-              <div class="battery-stages higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre2 low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre low-litre2 low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
+            <div class="main-battery" id="main-battery3">
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
             </div>
-            <div class="main-battery">
-              <div class="battery-stages higher-litre3"></div>
-              <div class="battery-stages higher-litre2 higher-litre3"></div>
-              <div class="battery-stages higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre2 low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre low-litre2 low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
+            <div class="main-battery" id="main-battery4">
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
             </div>
-            <div class="main-battery">
-              <div class="battery-stages higher-litre3"></div>
-              <div class="battery-stages higher-litre2 higher-litre3"></div>
-              <div class="battery-stages higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre2 low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre low-litre2 low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
+            <div class="main-battery" id="main-battery5">
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
             </div>
-            <div class="main-battery">
-              <div class="battery-stages higher-litre3"></div>
-              <div class="battery-stages higher-litre2 higher-litre3"></div>
-              <div class="battery-stages higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre2 low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
-              <div class="battery-stages low-litre low-litre2 low-litre3 medium-litre medium-litre2 medium-litre3 medium-litre4 higher-litre higher-litre2 higher-litre3"></div>
+            <div class="main-battery" id="main-battery6">
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
+              <div class="battery-stages"></div>
             </div>
            
           </div>
