--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <div class="bottom-charts">
         <div class="progress-div inner-bottom-charts">
           <div class="inner-progress-div1">
-            <img src="./images/therma.svg" />
+            <img src="./assets/thermo.svg" />
             <div class="canvas-div">
               <canvas id="myChart2" height="70"> </canvas>
             </div>
           </div>
           <div class="inner-progress-div1">
-            <img src="./images/water.svg" />
+            <img src="./assets/water.svg" />
             <div class="canvas-div">
               <canvas id="myChart3" height="70"> </canvas>
             </div>
